--- a/JavaScript Fundamentals/Homeworks/Loops/03. Min Max Of Sequence/minMaxOfSequence.html
+++ b/JavaScript Fundamentals/Homeworks/Loops/03. Min Max Of Sequence/minMaxOfSequence.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Min/Max Of Sequence</title>
 	<script src="minMaxOfSequence.js"></script>
+	<link href="../styles/styles.css"/>
 </head>
 <body>
 	<header>
