--- a/JavaScript Fundamentals/Homeworks/Loops/03. Min Max Of Sequence/minMaxOfSequence.html
+++ b/JavaScript Fundamentals/Homeworks/Loops/03. Min Max Of Sequence/minMaxOfSequence.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Min/Max Of Sequence</title>
 	<script src="minMaxOfSequence.js"></script>
-	<link href="../styles/styles.css"/>
+	<link rel="stylesheet" href="../styles/styles.css"/>
 </head>
 <body>
 	<header>
@@ -13,9 +13,9 @@
 	</header>
 
 	<div id="input">
-		<label for="inputForm">Please enter numbers separated by space</label>
-		<input id="inputForm"> <br>
-		<button onclick="minMaxOfSequence()">Submit</button>
+		<label for="inputForm">Please enter numbers separated by space</label> <br>
+		<input id="inputForm">
+		<button id="button" onclick="minMaxOfSequence()">Submit</button>
 	</div>
 
 	<div id="console">
